--- a/Prospector_Tutorial.ipynb
+++ b/Prospector_Tutorial.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Anya's Photometry Only Prospector Tutorial \n",
+    "# Anya's Prospector Tutorial \n",
     "\n",
     "Date created: Oct 29, 2024.\n",
     "\n",
